form og text update

--- a/bestillinger.html
+++ b/bestillinger.html
@@ -205,8 +205,7 @@
       <p>Vi sammensætter pakker til vores erhvervskunder og leder efter løsninger, der passer til lige præcis dine ønsker</p>
       <p>Hos Bagt har du også mulighed for at blive oprettet som kontokunde og få løbende fakturering. Minimum handelsbeløb 5000,- pr. måned.</p>
       <p>Vi vil meget gerne hjælpe jer godt på vej. Har i spørgsmål, skal i være velkommen til at skrive på mailen:</p>
-      <p>Engros@bagt.nu</p>
-      <p>Vores butikker ligger i både København og Nordsjælland.</p>
+      <p><strong>Engros@bagt.nu</strong></p>
 
       <form>
         <div class="form_1">
@@ -235,8 +234,8 @@
                   <option value="Hornbæk">Hornbæk</option>
                   <option value="Gilleleje">Gilleleje</option>
                   <option value="Helsingør">Helsingør</option>
-                  <option value="Nørrebro">Jagtvej</option>
-                  <option value="Indre By">Borgergade</option>
+                  <option value="Nørrebro">Nørrebro</option>
+                  <option value="Indre By">Indre By</option>
                 </select>
               </label>
             </div>
