--- a/bestillinger.html
+++ b/bestillinger.html
@@ -251,7 +251,7 @@
         <div class="form_felt">
           <label>
             <br>Besked</br>
-            <textarea name="besked" rows="10" cols="50"></textarea>
+            <textarea id="besked" name="besked" rows="10" cols="50"></textarea>
           </label>
         </div>
 
