--- a/kontakt.html
+++ b/kontakt.html
@@ -23,16 +23,17 @@
         </ul>
       </nav>
     </header>
+  <main>
     <section>
       <h2>Kontakt os</h2>
       <div class="grid_kontakt">
         <div class="boks">
           <h3 id="link_footer">Mail</h3>
-<address>
+    <address>
   <a href="mailto:job1@bagt.nu">job1@bagt.nu</a>
     <a href="mailto:engros@bagt.nu">engros@bagt.nu</a>
       <a href="mailto:bestilling@bagt.nu">bestilling@bagt.nu</a>
-</address>
+    </address>
         </div>
         <div class="boks">
           <h3>Social</h3>
@@ -177,6 +178,7 @@
         <a href="bestillinger.html#link_footer1">Specialbestillinger</a><br>
         <a href="bestillinger.html#link_footer3">Engros bestillinger</a>
       </div>
+    </main>
     </footer>
     <script src="javascript/login.js"></script>
   </body>
