--- a/kontakt.html
+++ b/kontakt.html
@@ -115,7 +115,7 @@
     </section>
     <section>
       <h2>Forhandlere</h2>
-      <div class="grid_forhandlere">
+      <div class="flex_forhandlere">
         <div class="boks">
           <h3>Hej Humlebæk</h3>
           <p>Hal Kochs Vej 14</p>
