footer update + forside img

--- a/kontakt.html
+++ b/kontakt.html
@@ -73,7 +73,7 @@
     </div>
     </section>
     <section>
-      <h2>Vores butikker</h2>
+      <h2 id="link_footer4">Vores butikker</h2>
       <div class="grid_butikker">
         <div class="boks">
           <img src="img/norrebro.webp" alt="butikken på Nørrebro" />
@@ -156,7 +156,7 @@
       <div class="box">
         <h5>Kontakt</h5>
         <a href="kontakt.html#link_footer">Mail</a>
-        <p>Telefon</p>
+        <a href="kontakt.html#link_footer4"></a> Butikker</p>
       </div>
       <div class="box">
         <h5>Sociale Medier</h5>
@@ -175,10 +175,9 @@
       </div>
       <div class="box">
         <h5>Bestillinger</h5>
-        <a href="bestillinger.html#link_footer1">Specialbestillinger</a><br>
+        <a href="bestillinger.html#link_footer1">Specialbestillinger</a><br />
         <a href="bestillinger.html#link_footer3">Engros bestillinger</a>
       </div>
-    </main>
     </footer>
     <script src="javascript/login.js"></script>
   </body>
