--- a/om_bagt.html
+++ b/om_bagt.html
@@ -28,7 +28,7 @@
       <div class="box">
         <h5>Kontakt</h5>
         <a href="kontakt.html#link_footer">Mail</a>
-        <p>Telefon</p>
+        <a href="kontakt.html#link_footer4"></a> Butikker</p>
       </div>
       <div class="box">
         <h5>Sociale Medier</h5>
