kopier herfra footer

--- a/kopier herfra/footer.html
+++ b/kopier herfra/footer.html
@@ -2,7 +2,7 @@
   <div class="box">
     <h5>Kontakt</h5>
     <a href="kontakt.html#link_footer">Mail</a>
-    <p>Telefon</p>
+    <a href="kontakt.html#link_footer4">Butikker</a>
   </div>
   <div class="box">
     <h5>Sociale Medier</h5>
@@ -21,7 +21,7 @@
   </div>
   <div class="box">
     <h5>Bestillinger</h5>
-    <a href="bestillinger.htmll#link_footer1">Specialbestillinger</a>
+    <a href="bestillinger.html#link_footer1">Specialbestillinger</a><br />
     <a href="bestillinger.html#link_footer3">Engros bestillinger</a>
   </div>
 </footer>
