--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
     <main>
       <iframe src="" frameborder="0"></iframe>
       <div class="usp">
-        <p>Franskinspireret bageri med danske rødder.</p>
-        <p>Vi håndlaver bagværk af kvalitet med kærlighed til dig.</p>
+        <p>"Franskinspireret bageri med danske rødder.</p>
+        <p>Vi håndlaver bagværk af kvalitet med kærlighed til dig"</p>
       </div>
       <br />
       <div class="om_os">
