--- a/kontakt.html
+++ b/kontakt.html
@@ -24,7 +24,7 @@
       </nav>
     </header>
   <main>
-    <section>
+    <section class="section1">
       <h2>Kontakt os</h2>
       <div class="grid_kontakt">
         <div class="boks">
