--- a/kontakt.html
+++ b/kontakt.html
@@ -50,7 +50,7 @@
         </div>
       </div>
     </section>
-    <section>
+    <section class="section2">
       <div class="grid_job">
         <div class="boks1">
           <img src="img/job.webp" alt="Medarbejder hos Bagt">
