--- a/index.html
+++ b/index.html
@@ -41,59 +41,58 @@
         <div class="container">
           <img src="img/norrebro.webp" class="thumbnail" height="100" width="100" alt="Nørrebros butik" />
           <h2 class="thumbnail">NØRREBRO</h2>
-          <p>Jagtvej 13</p>
-          <br />
-          <p>Tlf: 28 56 23 00</p>
-          <br />
-          <p>Alle dage: 7.00 - 17.30</p>
+          <div class="ps">
+            <p>Jagtvej 13</p>
+            <p>Tlf: 28 56 23 00</p>
+            <p>Alle dage: 7.00 - 17.30</p>
+          </div>
         </div>
         <div class="container">
           <img src="img/indreby.webp" class="thumbnail" height="100" width="100" alt="Indre by butik" />
           <h2 class="thumbnail">INDRE BY</h2>
-          <p>Borgergade 130</p>
-          <br />
-          <p>Tlf: 24 76 13 03</p>
-          <br />
-          <p>Alle dage: 7.00 - 17.30</p>
+          <div class="ps">
+            <p>Borgergade 130</p>
+            <p>Tlf: 24 76 13 03</p>
+            <p>Alle dage: 7.00 - 17.30</p>
+          </div>
         </div>
         <div class="container">
           <img src="img/hornbaek.webp" class="thumbnail" height="100" width="100" alt="Hornbæk butik" />
           <h2 class="thumbnail">HORNBÆK</h2>
-          <p>Nordre Strandvej 339</p>
-          <br />
-          <p>Tlf: 49 70 00 51</p>
-          <br />
-          <p>Alle dage: 6.30 - 17.30</p>
+          <div class="ps">
+            <p>Nordre Strandvej 339</p>
+            <p>Tlf: 49 70 00 51</p>
+            <p>Alle dage: 6.30 - 17.30</p>
+          </div>
         </div>
         <div class="container">
           <img src="img/gilleleje.webp" class="thumbnail" height="100" width="100" alt="Gilleleje butik" />
           <h2 class="thumbnail">GILLELEJE</h2>
-          <p>Gilleleje Stationsvej 2.</p>
-          <br />
-          <p>Tlf: 53 70 32 50</p>
-          <br />
-          <p>Alle dage: 6.30 - 17.30</p>
+          <div class="ps">
+            <p>Gilleleje Stationsvej 2.</p>
+            <p>Tlf: 53 70 32 50</p>
+            <p>Alle dage: 6.30 - 17.30</p>
+          </div>
         </div>
         <div class="container">
           <img src="img/helsingor.webp" class="thumbnail" height="100" width="100" alt="Helsingør butik" />
           <h2 class="thumbnail">HELSINGØR</h2>
-          <p>Stengade 8</p>
-          <br />
-          <p>Tlf: 42 36 96 55</p>
-          <br />
-          <p>Man - Fre: 7.00 - 17.30</p>
-          <p>Weekend & helligdage: 7.00 -16.30</p>
+          <div class="ps">
+            <p>Stengade 8</p>
+            <p>Tlf: 42 36 96 55</p>
+            <p>Man - Fre: 7.00 - 17.30</p>
+            <p>Weekend & helligdage: 7.00 -16.30</p>
+          </div>
         </div>
         <div class="container">
           <img src="img/forhandlere.webp" class="thumbnail" height="100" width="100" alt="Forhandlere" />
-          <h2 class="thumbnail">Bagt Forhandlere</h2>
-          <p>Hej Humlebæk</p>
-          <br />
-          <p>Daisy Fredensborg</p>
-          <br />
-          <p>Rågeleje</p>
-          <br />
-          <p>Kommer snart</p>
+          <h2 class="thumbnail">BAGT FORHANDLERE</h2>
+          <div class="ps">
+            <p>Hej Humlebæk</p>
+            <p>Daisy Fredensborg</p>
+            <p>Rågeleje</p>
+            <p>Kommer snart</p>
+          </div>
         </div>
       </div>
     </main>
