--- a/bestillinger.html
+++ b/bestillinger.html
@@ -25,7 +25,6 @@
     </header>
     <main>
       <img src="img/bestilling.webp" alt="" />
-      <h1>Udvalg</h1>
       <div class="top">
         <h2>Kager</h2>
         <p>Gør det nemt at holde fest og lade Bagt klare desserten</p>
@@ -180,9 +179,6 @@
         </section>
         
       __________________________________________________________________________________________________
-
-      <h1>Bestilling</h1>
-
       <div class="bestil_vare">
         <h2>Bestil din vare</h2>
         <p>Ønsker du at lægge en kundebestilling hos en ad vores butikker, eller har du spørgsmål angående vores varer og sortiment? Så skriv endelig til os på Bestilling@bagt.nu</p>
@@ -199,64 +195,57 @@
           </div>
         </div>
       </div>
-
-      <h2 id="link_footer3">Bliv engros- eller erhvervskunde</h2>
-      <p>Har du brug for at fylde din café med friskbagt brød? Eller servere croissanter på dit arbejde hver fredag morgen? Måske har i mest lyst til lækre sandwiches til mødet.</p>
-      <p>Vi sammensætter pakker til vores erhvervskunder og leder efter løsninger, der passer til lige præcis dine ønsker</p>
-      <p>Hos Bagt har du også mulighed for at blive oprettet som kontokunde og få løbende fakturering. Minimum handelsbeløb 5000,- pr. måned.</p>
-      <p>Vi vil meget gerne hjælpe jer godt på vej. Har i spørgsmål, skal i være velkommen til at skrive på mailen:</p>
-      <p><strong>Engros@bagt.nu</strong></p>
-
-      <form>
-        <div class="form_1">
-          <div class="form-felt">
-            <br><label for="navn">Navn</label></br>
-            <input id="navn" type="text" name="fname" />
-          </div>
-
-          <div class="form-felt">
-            <br><label for="tel">Telefonnummer</label></br>
-            <input id="tel" type="tel" name="Tlf. nummer">
-          </div>
-        </div>
-
-
-        <div class="form_2">
-          <div class="form-felt">
-            <br><label for="email">Email</label></br>
-            <input id="email" type="text" name="email" />
-          </div>
+          <h2 id="link_footer3">Bliv engros- eller erhvervskunde</h2>
+          <p>Har du brug for at fylde din café med friskbagt brød? Eller servere croissanter på dit arbejde hver fredag morgen? Måske har i mest lyst til lækre sandwiches til mødet.</p>
+          <p>Vi sammensætter pakker til vores erhvervskunder og leder efter løsninger, der passer til lige præcis dine ønsker</p>
+          <p>Hos Bagt har du også mulighed for at blive oprettet som kontokunde og få løbende fakturering. Minimum handelsbeløb 5000,- pr. måned.</p>
+          <p>Vi vil meget gerne hjælpe jer godt på vej. Har i spørgsmål, skal i være velkommen til at skrive på mailen:</p>
+          <p><strong>Engros@bagt.nu</strong></p>
+          <form>
+            <div class="form_1">
+              <div class="form-felt">
+                <br><label for="navn">Navn</label></br>
+                <input id="navn" type="text" name="fname" />
+              </div>
+              <div class="form-felt">
+                <br><label for="tel">Telefonnummer</label></br>
+                <!--<span class="form-felt-text" id="basic-addon1">+45</span>-->
+                <input id="tel" type="tel" name="Tlf. nummer">
+              </div>
+            </div>
+            <div class="form_2">
+              <div class="form-felt">
+                <br><label for="email">Email</label></br>
+                <input id="email" type="text" name="email" />
+              </div>
           
-          <div class="form_felt">
+              <div class="form_felt">
+                  <label>
+                    <br>Vælg butik</br>
+                    <select name="liste">
+                      <option value="">Select</option>
+                      <option value="Hornbæk">Hornbæk</option>
+                      <option value="Gilleleje">Gilleleje</option>
+                      <option value="Helsingør">Helsingør</option>
+                      <option value="Nørrebro">Nørrebro</option>
+                      <option value="Indre By">Indre By</option>
+                    </select>
+                  </label>
+                </div>
+              </div>
+            </div>
+            <div class="form-felt">
+              <br><label for="emne">Emne</label></br>
+              <input id="emne" type="text" name="emne" />
+            </div>
+            <div class="form_felt">
               <label>
-                <br>Vælg butik</br>
-                <select name="liste">
-                  <option value="">Select</option>
-                  <option value="Hornbæk">Hornbæk</option>
-                  <option value="Gilleleje">Gilleleje</option>
-                  <option value="Helsingør">Helsingør</option>
-                  <option value="Nørrebro">Nørrebro</option>
-                  <option value="Indre By">Indre By</option>
-                </select>
+                <br>Besked</br>
+                <textarea id="besked" name="besked" rows="10" cols="50"></textarea>
               </label>
             </div>
-          </div>
-        </div>
-
-        <div class="form-felt">
-          <br><label for="emne">Emne</label></br>
-          <input id="emne" type="text" name="emne" />
-        </div>
-
-        <div class="form_felt">
-          <label>
-            <br>Besked</br>
-            <textarea id="besked" name="besked" rows="10" cols="50"></textarea>
-          </label>
-        </div>
-
-        <button class="button">Indsend</button>
-      </form>
+            <button class="button">Indsend</button>
+          </form>
     </main>
     <footer class="grid_1_1_1_1">
       <div class="box">
