--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             <p>Stengade 8</p>
             <p>Tlf: 42 36 96 55</p>
             <p>Man - Fre: 7.00 - 17.30</p>
-            <p>Weekend & helligdage: 7.00 -16.30</p>
+            <p>Weekend: 7.00 -16.30</p>
           </div>
         </div>
         <div class="container">
