--- a/kontakt.html
+++ b/kontakt.html
@@ -26,7 +26,7 @@
   <main>
     <section class="section1">
       <h2>Kontakt os</h2>
-      <div class="grid_kontakt">
+      <div class="flex_kontakt">
         <div class="boks">
           <h3 id="link_footer">Mail</h3>
             <address>
@@ -52,22 +52,22 @@
     </section>
     <section class="section2">
       <div class="grid_job">
-        <div class="boks1">
+        <div class="boks">
           <img src="img/job.webp" alt="Medarbejder hos Bagt">
-          <p>Gilleleje - Fuldtidsmedarbejdere søges</p>
-          <p>Hornbæk - Fuldtidsmedarbejdere søges</p>
+          <p class="strong">Gilleleje - Fuldtidsmedarbejdere søges</p>
+          <p class="strong">Hornbæk - Fuldtidsmedarbejdere søges</p>
         </div>
         <div class="boks">
           <h2>Bagt family</h2>
           <p>Hos Bagt udvikler vi os hele tiden, så derfor er vi altid på udkig efter nye engagerede medarbejdere. </p>
           <p> Vi tror på, at det skal være sjovt at gå på arbejde, og at vi allesammen har et ansvar for at gøre Bagt til et godt sted at være. </p>
           <p> Du er altid velkommen til at sende os en uopfordret ansøgning til os. Vi finder mange af vores medarbejdere gennem uopfordrede ansøgninger.</p>
-          <p> Send din ansøgning til <a href="mailto:job1@bagt.nu">job1@bagt.nu</a>
+          <p> Send din ansøgning til <a href="mailto:job1@bagt.nu"><strong>job1@bagt.nu</strong></a>
           <p>Vi glæder os til at høre fra dig!</p>
         </div>
       </div>
     </section>
-    <section>
+    <section class="section3">
       <h2 id="link_footer4">Vores butikker</h2>
       <div class="grid_butikker">
         <div class="boks">
@@ -113,7 +113,7 @@
         </div>
       </div>
     </section>
-    <section>
+    <section class="section4">
       <h2>Forhandlere</h2>
       <div class="flex_forhandlere">
         <div class="boks">
