--- a/om_bagt.html
+++ b/om_bagt.html
@@ -13,7 +13,7 @@
   <body>
     <header>
       <div class="logo">
-        <a href="index.html"><img src="logo.svg" alt="logo" /></a>
+        <a href="index.html"><img src="logo.svg" alt="logo"></a>
       </div>
       <nav>
         <ul>
