--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
     </header>
     <main>
       <iframe src="" frameborder="0"></iframe>
-      <div class="full" class="usp">
+      <div class="full usp">
         <p>"Franskinspireret bageri med danske rødder.</p>
         <p>Vi håndlaver bagværk af kvalitet med kærlighed til dig"</p>
       </div>
-      <div class="full" class="om_os">
+      <div class="full om_os">
         <h2>· Lidt om os ·</h2>
         <p>
           Hos Bagt bestræber vi os på at skabe bagerhåndværk af kvalitet med bæredygtighed for øje. Vi udfordrer os selv og udvikler vores butikker, samt sortiment med det franske boulagerie som inspirationskilde. Målet er at give vores gæster en
