--- a/kontakt.html
+++ b/kontakt.html
@@ -45,13 +45,13 @@
           </div>
           <div class="boks">
             <h3>App</h3>
-            <p>Download vores app og få ekslusive fordele. Gør dine stempelkort digitale. Hold dig opdateret på nyheder og optjen point når du handler.
+            <p>Download vores app og få ekslusive fordele som loyalitetskunde. Gør dine stempelkort digitale. Hold dig opdateret på nyheder og optjen point når du handler.
             </p>
           </div>
         </div>
       </section>
-      <section class="section2">
-        <div class="grid_job">
+      <section class="section2 full">
+        <div class="grid_job full">
           <div class="boks">
             <img src="img/job.webp" alt="Medarbejder hos Bagt">
             <p class="strong">Gilleleje - Fuldtidsmedarbejdere søges</p>
