--- a/kontakt.html
+++ b/kontakt.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="css/kontakt.css" />
     <link rel="stylesheet" href="css/mutual.css" />
     <link rel="stylesheet" href="css/footer.css" />
+    <link rel="icon" type="image/svg+xml" href="favicon.svg" />
   </head>
   <body>
       <header>
