--- a/bestillinger.html
+++ b/bestillinger.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/mutual.css" />
     <link rel="stylesheet" href="css/bestillinger.css" />
     <link rel="stylesheet" href="css/footer.css">
+    <link rel="icon" type="image/svg+xml" href="favicon.svg" />
     <meta name="robots" content="noindex" />
   </head>
   <body>
