--- a/om_bagt.html
+++ b/om_bagt.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="css/mutual.css" />
     <link rel="stylesheet" href="css/bestillinger.css" />
     <link rel="stylesheet" href="css/footer.css" />
+    <link rel="icon" type="image/svg+xml" href="favicon.svg" />
   </head>
   <body>
     <header>
