--- a/kontakt.html
+++ b/kontakt.html
@@ -26,7 +26,7 @@
     <main>
       <section class="section1">
         <h2>Kontakt os</h2>
-        <div class="flex_kontakt">
+        <div class="grid_kontakt">
           <div class="boks">
             <h3 id="link_footer">Mail</h3>
               <address>
@@ -40,18 +40,19 @@
             <a href="https://www.instagram.com/bagt_boulangerie/" class="instagram">Instagram</a>
             <a href="https://www.facebook.com/bagt.dk" class="facebook">Facebook</a>
             <a href="https://www.linkedin.com/authwall?trk=bf&trkInfo=AQF4zpW5iJkvPwAAAYTns344Z9MVaVW1owAXV24CTfG8TTUdDbP9vVp5K4jnj1Cff8mLsSIwDbxcI2DJXplKEh-bYS_RSU_-SxsQtej9BIslZhvfrtsinVJJ73Q2QzNwIPdY_dQ=&original_referer=&sessionRedirect=https%3A%2F%2Fwww.linkedin.com%2Fcompany%2Fbagt-boulangerie-aps" class="linkedin"">LinkedIn</a>
-                    <a href="https://apps.apple.com/us/app/bagt/id1564306002" class="ios">IOS</a>
-            <a href="https://play.google.com/store/apps/details?id=com.app_bagtnu.layout&pli=1" class="android">Android</a>
+          
           </div>
           <div class="boks">
             <h3>App</h3>
             <p>Download vores app og få ekslusive fordele som loyalitetskunde. Gør dine stempelkort digitale. Hold dig opdateret på nyheder og optjen point når du handler.
             </p>
+            <a href="https://apps.apple.com/us/app/bagt/id1564306002" class="ios">IOS</a>
+            <a href="https://play.google.com/store/apps/details?id=com.app_bagtnu.layout&pli=1" class="android">Android</a>
           </div>
         </div>
       </section>
       <section class="section2 full">
-        <div class="grid_job full">
+        <div class="grid_job">
           <div class="boks">
             <img src="img/job.webp" alt="Medarbejder hos Bagt">
             <p class="strong">Gilleleje - Fuldtidsmedarbejdere søges</p>
