--- a/index.html
+++ b/index.html
@@ -26,76 +26,82 @@
     </header>
     <main>
       <iframe src="" frameborder="0"></iframe>
-      <div class="full usp">
-        <p>"Franskinspireret bageri med danske rødder.</p>
-        <p>Vi håndlaver bagværk af kvalitet med kærlighed til dig"</p>
-      </div>
-      <div class="full om_os">
-        <h2>· Lidt om os ·</h2>
-        <p>
-          Hos Bagt bestræber vi os på at skabe bagerhåndværk af kvalitet med bæredygtighed for øje. Vi udfordrer os selv og udvikler vores butikker, samt sortiment med det franske boulagerie som inspirationskilde. Målet er at give vores gæster en
-          autentisk oplevelse hos Bagt, hvorved vi bringer vores gæster tættere på Frankrig. Vi stræber efter at give kærlig service, samt at opbygge tætte relationer til vores gæster.
-        </p>
-      </div>
-      <h2>· Vores åbningstider ·</h2>
-      <div class="gallery">
-        <div class="container">
-          <img src="img/norrebro.webp" class="thumbnail" height="100" width="100" alt="Nørrebros butik" />
-          <h2 class="thumbnail">NØRREBRO</h2>
-          <div class="ps">
-            <p>Jagtvej 13</p>
-            <p>Tlf: 28 56 23 00</p>
-            <p>Alle dage: 7.00 - 17.30</p>
+      <section>
+        <div class="full usp">
+          <p>"Franskinspireret bageri med danske rødder.</p>
+          <p>Vi håndlaver bagværk af kvalitet med kærlighed til dig"</p>
+        </div>
+      </section>
+      <section>
+        <div class="full om_os">
+          <h2>· Lidt om os ·</h2>
+          <p>
+            Hos Bagt bestræber vi os på at skabe bagerhåndværk af kvalitet med bæredygtighed for øje. Vi udfordrer os selv og udvikler vores butikker, samt sortiment med det franske boulagerie som inspirationskilde. Målet er at give vores gæster en
+            autentisk oplevelse hos Bagt, hvorved vi bringer vores gæster tættere på Frankrig. Vi stræber efter at give kærlig service, samt at opbygge tætte relationer til vores gæster.
+          </p>
+        </div>
+      </section>
+      <section>
+        <h2>· Vores åbningstider ·</h2>
+        <div class="gallery">
+          <div class="container">
+            <img src="img/norrebro.webp" class="thumbnail" height="100" width="100" alt="Nørrebros butik" />
+            <h2 class="thumbnail">NØRREBRO</h2>
+            <div class="ps">
+              <p>Jagtvej 13</p>
+              <p>Tlf: 28 56 23 00</p>
+              <p>Alle dage: 7.00 - 17.30</p>
+            </div>
+          </div>
+          <div class="container">
+            <img src="img/indreby.webp" class="thumbnail" height="100" width="100" alt="Indre by butik" />
+            <h2 class="thumbnail">INDRE BY</h2>
+            <div class="ps">
+              <p>Borgergade 130</p>
+              <p>Tlf: 24 76 13 03</p>
+              <p>Alle dage: 7.00 - 17.30</p>
+            </div>
+          </div>
+          <div class="container">
+            <img src="img/hornbaek.webp" class="thumbnail" height="100" width="100" alt="Hornbæk butik" />
+            <h2 class="thumbnail">HORNBÆK</h2>
+            <div class="ps">
+              <p>Nordre Strandvej 339</p>
+              <p>Tlf: 49 70 00 51</p>
+              <p>Alle dage: 6.30 - 17.30</p>
+            </div>
+          </div>
+          <div class="container">
+            <img src="img/gilleleje.webp" class="thumbnail" height="100" width="100" alt="Gilleleje butik" />
+            <h2 class="thumbnail">GILLELEJE</h2>
+            <div class="ps">
+              <p>Gilleleje Stationsvej 2.</p>
+              <p>Tlf: 53 70 32 50</p>
+              <p>Alle dage: 6.30 - 17.30</p>
+            </div>
+          </div>
+          <div class="container">
+            <img src="img/helsingor.webp" class="thumbnail" height="100" width="100" alt="Helsingør butik" />
+            <h2 class="thumbnail">HELSINGØR</h2>
+            <div class="ps">
+              <p>Stengade 8</p>
+              <p>Tlf: 42 36 96 55</p>
+              <p>Man - Fre: 7.00 - 17.30</p>
+              <p>Weekend: 7.00 -16.30</p>
+            </div>
+          </div>
+          <div class="container">
+            <img src="img/forhandlere.webp" class="thumbnail" height="100" width="100" alt="Forhandlere" />
+            <h2 class="thumbnail">BAGT FORHANDLERE</h2>
+            <div class="ps">
+              <p>· Hej Humlebæk ·</p>
+              <p>· Daisy Fredensborg ·</p>
+              <p>· Rågeleje ·</p>
+              <p>· Kommer snart ·</p>
+            </div>
           </div>
         </div>
-        <div class="container">
-          <img src="img/indreby.webp" class="thumbnail" height="100" width="100" alt="Indre by butik" />
-          <h2 class="thumbnail">INDRE BY</h2>
-          <div class="ps">
-            <p>Borgergade 130</p>
-            <p>Tlf: 24 76 13 03</p>
-            <p>Alle dage: 7.00 - 17.30</p>
-          </div>
-        </div>
-        <div class="container">
-          <img src="img/hornbaek.webp" class="thumbnail" height="100" width="100" alt="Hornbæk butik" />
-          <h2 class="thumbnail">HORNBÆK</h2>
-          <div class="ps">
-            <p>Nordre Strandvej 339</p>
-            <p>Tlf: 49 70 00 51</p>
-            <p>Alle dage: 6.30 - 17.30</p>
-          </div>
-        </div>
-        <div class="container">
-          <img src="img/gilleleje.webp" class="thumbnail" height="100" width="100" alt="Gilleleje butik" />
-          <h2 class="thumbnail">GILLELEJE</h2>
-          <div class="ps">
-            <p>Gilleleje Stationsvej 2.</p>
-            <p>Tlf: 53 70 32 50</p>
-            <p>Alle dage: 6.30 - 17.30</p>
-          </div>
-        </div>
-        <div class="container">
-          <img src="img/helsingor.webp" class="thumbnail" height="100" width="100" alt="Helsingør butik" />
-          <h2 class="thumbnail">HELSINGØR</h2>
-          <div class="ps">
-            <p>Stengade 8</p>
-            <p>Tlf: 42 36 96 55</p>
-            <p>Man - Fre: 7.00 - 17.30</p>
-            <p>Weekend: 7.00 -16.30</p>
-          </div>
-        </div>
-        <div class="container">
-          <img src="img/forhandlere.webp" class="thumbnail" height="100" width="100" alt="Forhandlere" />
-          <h2 class="thumbnail">BAGT FORHANDLERE</h2>
-          <div class="ps">
-            <p>· Hej Humlebæk ·</p>
-            <p>· Daisy Fredensborg ·</p>
-            <p>· Rågeleje ·</p>
-            <p>· Kommer snart ·</p>
-          </div>
-        </div>
-      </div>
+      </section>
     </main>
     <footer class="grid_1_1_1_1">
       <div class="box">
