--- a/index.html
+++ b/index.html
@@ -26,17 +26,17 @@
     </header>
     <main>
       <iframe src="" frameborder="0"></iframe>
-      <section>
-        <div class="full usp">
+      <section class="full usp">
+        <div>
           <p>"Franskinspireret bageri med danske rødder.</p>
           <p>Vi håndlaver bagværk af kvalitet med kærlighed til dig"</p>
         </div>
       </section>
-      <section>
-        <div class="full om_os">
+      <section class="full om_os">
+        <div>
           <h2>· Lidt om os ·</h2>
           <p>
-            Hos Bagt bestræber vi os på at skabe bagerhåndværk af kvalitet med bæredygtighed for øje. Vi udfordrer os selv og udvikler vores butikker, samt sortiment med det franske boulagerie som inspirationskilde. Målet er at give vores gæster en
+            Hos Bagt bestræber vi os på at skabe bagerhåndværk af kvalitet med bæredygtighed for øje. Vi udfordrer os selv og udvikler vores butikker, samt sortiment med det franske boulangerie som inspirationskilde. Målet er at give vores gæster en
             autentisk oplevelse hos Bagt, hvorved vi bringer vores gæster tættere på Frankrig. Vi stræber efter at give kærlig service, samt at opbygge tætte relationer til vores gæster.
           </p>
         </div>
