--- a/bestillinger.html
+++ b/bestillinger.html
@@ -32,7 +32,7 @@
         <h3>Mini Kager</h3>
         <p>Hvis du synes det er svært at vælge én kage…. Vores mini-kager er lavet i mundrette størrelser og kan spises uden bestik. Alle kager hos Bagt kan laves i mini versioner.</p> 
       </div>
-      <section class="mini_kager">
+      <section class="full">
          
         <div class="grid_1-1">
           <div>
@@ -179,7 +179,7 @@
           </div>
         </section>
         
-      <div class="bestil_vare">
+      <div class="full">
         <h2>Bestil din vare</h2>
         <p>Ønsker du at lægge en kundebestilling hos en ad vores butikker, eller har du spørgsmål angående vores varer og sortiment? Så skriv endelig til os på Bestilling@bagt.nu</p>
         <p>Vi svarer altid inden for et døgn.</p>
