--- a/om_bagt.html
+++ b/om_bagt.html
@@ -24,7 +24,51 @@
         </ul>
       </nav>
     </header>
-    <main></main>
+    <main>
+      <p>
+        Der er sket meget, siden det selvklæbende “til salg”-skilt blev fjernet
+        fra bageriets vindue i Hornbæk i marts 2011 . Der er blevet købt, solgt,
+        udvidet, bygget og revet ned - og der er blevet æltet, formet, smagt og
+        bagt. Alt sammen for at føre en drøm om et fransk bageri med danske
+        rødder ud i livet.
+      </p>
+      <br />
+      <p>
+        Vores signatur-brød er det gode, lyse moffebrød, som vi bager efter
+        fransk metode med surdej, masser af vand og langtidshævning. Det giver
+        et godt brød med et blødt indre, der står i kontrast til en skorpe, der
+        er så sprød, at man kan høre den. Udtrykket er enkelt og rustikt - og
+        man får mel på fingrene, når man går hjem fra Bagt med sit brød.
+      </p>
+      <br />
+      <p>
+        Bagt har siden 2011 udviklet sig til 5 succesfulde butikker placeret i
+        Nordsjælland og København. Visionerne er store, men missionen vil altid
+        være den samme - At skabe bagværk af kvalitet med inspiration fra
+        Frankrig.
+      </p>
+      <br />
+      <section class="full usp">
+        <div>
+          <br />
+          <p>
+            “Jeg tænker tit på, at et brød er noget af det allermest basale og
+            fundamentale i vores kost. Men derfor behøver det ikke at være
+            kedeligt. Et brød kan også være det eneste, du husker fra et besøg
+            på en fin restaurant. En sprød skorpe eller brødets svampede midte
+            fuld af store huller kan gøre brødet til noget mindeværdigt. Et
+            ordentligt brød er en oplevelse, og det er dét, jeg gerne vil give
+            gæsterne hos Bagt.” - Hans Schepelern
+          </p>
+          <br />
+              </section><br><p>
+          Bagt har siden 2011 udviklet sig til 5 succesfulde butikker placeret i
+          Nordsjælland og København. Visionerne er store, men missionen vil
+          altid være den samme - At skabe bagværk af kvalitet med inspiration
+          fra Frankrig.
+        </p><br>
+
+    </main>
     <footer class="grid_1_1_1_1">
       <div class="box">
         <h5>Kontakt</h5>
@@ -34,7 +78,9 @@
       </div>
       <div class="box">
         <h5>Sociale Medier</h5>
-        <a href="https://www.instagram.com/bagt_boulangerie/" class="instagram">Instagram</a>
+        <a href="https://www.instagram.com/bagt_boulangerie/" class="instagram"
+          >Instagram</a
+        >
         <a href="https://www.facebook.com/bagt.dk" class="facebook">Facebook</a>
         <a
           href="https://www.linkedin.com/authwall?trk=bf&trkInfo=AQF4zpW5iJkvPwAAAYTns344Z9MVaVW1owAXV24CTfG8TTUdDbP9vVp5K4jnj1Cff8mLsSIwDbxcI2DJXplKEh-bYS_RSU_-SxsQtej9BIslZhvfrtsinVJJ73Q2QzNwIPdY_dQ=&original_referer=&sessionRedirect=https%3A%2F%2Fwww.linkedin.com%2Fcompany%2Fbagt-boulangerie-aps"
