--- a/om_bagt.html
+++ b/om_bagt.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="css/mutual.css" />
     <link rel="stylesheet" href="css/bestillinger.css" />
     <link rel="stylesheet" href="css/footer.css" />
+    <link rel="stylesheet" href="css/om_bagt.css">
     <link rel="icon" type="image/svg+xml" href="favicon.svg" />
   </head>
   <body>
@@ -25,6 +26,11 @@
       </nav>
     </header>
     <main>
+      <div class="overskrift">
+      <h1>Vores historie</h1>
+      <p>Franskinspireret boulangerie</p>
+      </div>
+      <img class="billede1" src="img/bagtfacade.webp" alt="">
       <p>
         Der er sket meget, siden det selvklæbende “til salg”-skilt blev fjernet
         fra bageriets vindue i Hornbæk i marts 2011 . Der er blevet købt, solgt,
