--- a/index.html
+++ b/index.html
@@ -34,12 +34,15 @@
         </div>
       </section>
       <section class="full om_os">
-        <div>
-          <h2>· Lidt om os ·</h2>
-          <p>
-            Hos Bagt bestræber vi os på at skabe bagerhåndværk af kvalitet med bæredygtighed for øje. Vi udfordrer os selv og udvikler vores butikker, samt sortiment med det franske boulangerie som inspirationskilde. Målet er at give vores gæster en
-            autentisk oplevelse hos Bagt, hvorved vi bringer vores gæster tættere på Frankrig. Vi stræber efter at give kærlig service, samt at opbygge tætte relationer til vores gæster.
-          </p>
+        <div class="grid_1-2">
+          <img src="img/femitems.webp" alt="billede" />
+          <div>
+            <h2>· Lidt om os ·</h2>
+            <p>
+              Hos Bagt bestræber vi os på at skabe bagerhåndværk af kvalitet med bæredygtighed for øje. Vi udfordrer os selv og udvikler vores butikker, samt sortiment med det franske boulangerie som inspirationskilde. Målet er at give vores gæster
+              en autentisk oplevelse hos Bagt, hvorved vi bringer vores gæster tættere på Frankrig. Vi stræber efter at give kærlig service, samt at opbygge tætte relationer til vores gæster.
+            </p>
+          </div>
         </div>
       </section>
       <section>
