--- a/bestillinger.html
+++ b/bestillinger.html
@@ -206,7 +206,7 @@
         </div>
         <div>
           <form>
-            <div class="grid_1-1">
+            <div class="form_grid_1-1">
               <div class="form-felt">
                 <br><label for="navn">Navn</label></br>
                 <input id="navn" type="text" name="fname" />
@@ -216,7 +216,7 @@
                 <input id="tel" type="tel" name="Tlf. nummer">
               </div>
             </div>
-            <div class="grid_1-1">
+            <div class="form_grid_1-1">
               <div class="form-felt">
                 <br><label for="email">Email</label></br>
                 <input id="email" type="text" name="email" />
