--- a/kontakt.html
+++ b/kontakt.html
@@ -110,8 +110,7 @@
           </div>
           <div class="boks">
             <h3>helligdage</h3 >
-            <p>Se åbningstider for helligdage </p>
-            <a href="">her</a>
+            <p>Se åbningstider for hellligdage på vores instagram <a href="https://www.instagram.com/p/Cl-1BdyMwLM/">her.</a></p>
           </div>
         </div>
       </section>
