form and maxwidth

--- a/bestillinger.html
+++ b/bestillinger.html
@@ -196,7 +196,7 @@
         </div>
       </div>
       <section class="grid_1-2">
-        <div>
+        <div class="engros">
           <h2 id="link_footer3">Bliv engros- eller erhvervskunde</h2>
           <p>Har du brug for at fylde din café med friskbagt brød? Eller servere croissanter på dit arbejde hver fredag morgen? Måske har i mest lyst til lækre sandwiches til mødet.</p>
           <p>Vi sammensætter pakker til vores erhvervskunder og leder efter løsninger, der passer til lige præcis dine ønsker</p>
