--- a/kontakt.html
+++ b/kontakt.html
@@ -75,42 +75,54 @@
           <div class="boks">
             <img src="img/norrebro.webp" alt="butikken på Nørrebro" />
             <h3>Nørrebro</h3>
-            <p>Jagtvej 13</p>
-            <p>Tlf: 28 56 23 00</p>
-            <p>Alle dage: 7.00 - 17.30</p>
+            <div class="ps">
+              <p>Jagtvej 13</p>
+              <p>Tlf: 28 56 23 00</p>
+              <p>Alle dage: 7.00 - 17.30</p>
+            </div>
           </div>
           <div class="boks">
             <img src="img/indreby.webp" alt="Butikken i Indre By" />
             <h3>Indre by</h3>
-            <p>Borgergade 130</p>
-            <p>Tlf: 24 76 13 03</p>
-            <p>Alle dage: 7.00 - 17.30</p>
+            <div class="ps">
+              <p>Borgergade 130</p>
+              <p>Tlf: 24 76 13 03</p>
+              <p>Alle dage: 7.00 - 17.30</p>
+            </div>
           </div>
           <div class="boks">
             <img src="img/hornbaek.webp" alt="Butikken i Hornbæk" />
             <h3>Hornbæk</h3>
-            <p>Nordre Strandvej 339</p>
-            <p>Tlf: 49 70 00 51</p>
-            <p>Alle dage: 6.30 - 17.30</p>
+            <div class="ps">
+             <p>Nordre Strandvej 339</p>
+             <p>Tlf: 49 70 00 51</p>
+             <p>Alle dage: 6.30 - 17.30</p>
+            </div>
           </div>
           <div class="boks">
             <img src="img/gilleleje.webp" alt="Butikken i Gilleleje" />
             <h3>Gilleleje</h3>
-            <p>Gilleleje Stationsvej 2.</p>
-            <p>Tlf: 53 70 32 50</p>
-            <p>Alle dage: 6.30 - 17.30</p>
+            <div class="ps">
+              <p>Gilleleje Stationsvej 2.</p>
+              <p>Tlf: 53 70 32 50</p>
+              <p>Alle dage: 6.30 - 17.30</p>
+            </div>
           </div>
           <div class="boks">
             <img src="img/helsingor.webp" alt="Butikken i Helsingør" />
             <h3>Helsingør</h3>
-            <p>Stengade 8</p>
-            <p>Tlf: 42 36 96 55</p>
-            <p>Man - Fre: 7.00 - 17.30</p>
-            <p>Weekend & helligdage: 7.00 -16.30</p>
+            <div class="ps">
+              <p>Stengade 8</p>
+              <p>Tlf: 42 36 96 55</p>
+              <p>Man - Fre: 7.00 - 17.30</p>
+              <p>Weekend & helligdage: 7.00 -16.30</p>
+            </div>
           </div>
-          <div class="boks">
+          <div class="boks_helligdag">
             <h3>helligdage</h3 >
-            <p>Se åbningstider for hellligdage på vores instagram <a href="https://www.instagram.com/p/Cl-1BdyMwLM/">her.</a></p>
+            <div class="ps">
+              <p>Se åbningstider for hellligdage på vores instagram <a href="https://www.instagram.com/p/Cl-1BdyMwLM/">her.</a></p>
+            </div>
           </div>
         </div>
       </section>
