--- a/kontakt.html
+++ b/kontakt.html
@@ -54,18 +54,18 @@
       </section>
       <section class="section2 full">
         <div class="grid_job">
-          <div class="boks">
-            <img src="img/job.webp" alt="Medarbejder hos Bagt">
-            <p class="strong">Gilleleje - Fuldtidsmedarbejdere søges</p>
-            <p class="strong">Hornbæk - Fuldtidsmedarbejdere søges</p>
-          </div>
-          <div class="boks">
+          <div class="boks_order">
             <h2>Bagt family</h2>
             <p>Hos Bagt udvikler vi os hele tiden, så derfor er vi altid på udkig efter nye engagerede medarbejdere. </p>
             <p> Vi tror på, at det skal være sjovt at gå på arbejde, og at vi allesammen har et ansvar for at gøre Bagt til et godt sted at være. </p>
             <p> Du er altid velkommen til at sende os en uopfordret ansøgning til os. Vi finder mange af vores medarbejdere gennem uopfordrede ansøgninger.</p>
             <p> Send din ansøgning til <a href="mailto:job1@bagt.nu"><strong>job1@bagt.nu</strong></a>
             <p>Vi glæder os til at høre fra dig!</p>
+          </div>
+          <div class="boks">
+            <img src="img/job.webp" alt="Medarbejder hos Bagt">
+            <p class="strong">Gilleleje - Fuldtidsmedarbejdere søges</p>
+            <p class="strong">Hornbæk - Fuldtidsmedarbejdere søges</p>
           </div>
         </div>
       </section>
@@ -128,7 +128,7 @@
       </section>
       <section class="section4">
         <h2>Forhandlere</h2>
-        <div class="flex_forhandlere">
+        <div class="grid_forhandlere">
           <div class="boks">
             <h3>Hej Humlebæk</h3>
             <p>Hal Kochs Vej 14</p>
