--- a/bestillinger.html
+++ b/bestillinger.html
@@ -180,10 +180,11 @@
         </section>
         
       <div class="full">
-        <h2>Bestil din vare</h2>
-        <p>Ønsker du at lægge en kundebestilling hos en ad vores butikker, eller har du spørgsmål angående vores varer og sortiment? Så skriv endelig til os på Bestilling@bagt.nu</p>
-        <p>Vi svarer altid inden for et døgn.</p>
-        <p>Vælg butik*</p>
+        <div class="kundebestilling"><h2>Bestil din vare</h2>
+          <p>Ønsker du at lægge en kundebestilling hos en ad vores butikker, eller har du spørgsmål angående vores varer og sortiment? Så skriv endelig til os på <strong>Bestilling@bagt.nu</strong></p>
+          <p>Vi svarer altid inden for et døgn.</p>
+          <p>Vælg butik*</p>
+        </div>
         <div class="butikker">
           <div>
             <p><strong>Nordsjælland:</strong></p>
@@ -196,13 +197,15 @@
         </div>
       </div>
       <section class="grid_1-2">
-        <div class="engros">
+        <div>
           <h2 id="link_footer3">Bliv engros- eller erhvervskunde</h2>
-          <p>Har du brug for at fylde din café med friskbagt brød? Eller servere croissanter på dit arbejde hver fredag morgen? Måske har i mest lyst til lækre sandwiches til mødet.</p>
-          <p>Vi sammensætter pakker til vores erhvervskunder og leder efter løsninger, der passer til lige præcis dine ønsker</p>
-          <p>Hos Bagt har du også mulighed for at blive oprettet som kontokunde og få løbende fakturering. Minimum handelsbeløb 5000,- pr. måned.</p>
-          <p>Vi vil meget gerne hjælpe jer godt på vej. Har i spørgsmål, skal i være velkommen til at skrive på mailen:</p>
-          <p><strong>Engros@bagt.nu</strong></p>
+          <div class="engros">
+            <p>Har du brug for at fylde din café med friskbagt brød? Eller servere croissanter på dit arbejde hver fredag morgen? Måske har i mest lyst til lækre sandwiches til mødet.</p>
+            <p>Vi sammensætter pakker til vores erhvervskunder og leder efter løsninger, der passer til lige præcis dine ønsker</p>
+            <p>Hos Bagt har du også mulighed for at blive oprettet som kontokunde og få løbende fakturering. Minimum handelsbeløb 5000,- pr. måned.</p>
+            <p>Vi vil meget gerne hjælpe jer godt på vej. Har i spørgsmål, skal i være velkommen til at skrive på mailen:</p>
+            <p><strong>Engros@bagt.nu</strong></p>
+          </div>
         </div>
         <div>
           <form>
