google font update

--- a/kopier herfra/footer.html
+++ b/kopier herfra/footer.html
@@ -2,8 +2,7 @@
   <div class="box">
     <h5>Kontakt</h5>
     <a href="kontakt.html#link_footer">Mail</a>
-    <a href="kontakt.html#link_footer4"></a>
-    <p>Butikker</p>
+    <a href="kontakt.html#link_footer4">Butikker</a>
   </div>
   <div class="box">
     <h5>Sociale Medier</h5>
@@ -18,7 +17,8 @@
   <div class="box">
     <h5>Om Bagt</h5>
     <p>Vores Historie</p>
-    <p>Værdier og visioner</p>
+    <a href="om_bagt.html#link_footer5">Vores Historie</a>
+    <a href="om_bagt.html#link_footer6">Værdier og visioner</a>
   </div>
   <div class="box">
     <h5>Bestillinger</h5>
