--- a/om_bagt.html
+++ b/om_bagt.html
@@ -27,7 +27,7 @@
     </header>
     <main>
       <div class="overskrift">
-      <h1>Vores historie</h1>
+      <h1 id="link_footer5">Vores historie</h1>
       <p>Franskinspireret boulangerie</p>
       </div>
       <img class="billede1" src="img/bagtfacade.webp" alt="">
