--- a/bestillinger.html
+++ b/bestillinger.html
@@ -217,7 +217,7 @@
                 <label>
                   <br>Vælg butik</br>
                     <select name="liste">
-                      <option value="">Select</option>
+                      <option value="">Butik</option>
                       <option value="Hornbæk">Hornbæk</option>
                       <option value="Gilleleje">Gilleleje</option>
                       <option value="Helsingør">Helsingør</option>
