--- a/kontakt.html
+++ b/kontakt.html
@@ -64,8 +64,8 @@
           </div>
           <div class="boks">
             <img src="img/job.webp" alt="Medarbejder hos Bagt">
-            <p class="strong">Gilleleje - Fuldtidsmedarbejdere søges</p>
-            <p class="strong">Hornbæk - Fuldtidsmedarbejdere søges</p>
+            <p class="stillinger">Gilleleje - Fuldtidsmedarbejdere søges</p>
+            <p class="stillinger">Hornbæk - Fuldtidsmedarbejdere søges</p>
           </div>
         </div>
       </section>
