--- a/bestillinger.html
+++ b/bestillinger.html
@@ -245,8 +245,8 @@
     <footer class="grid_1_1_1_1">
       <div class="box">
         <h5>Kontakt</h5>
-        <a href="kontakt.html#link_footer">Mail</a>
-        <a href="kontakt.html#link_footer4"></a> <P>Butikker</p>
+        <a href="kontakt.html#link_footer">kontaktoplysninger</a>
+        <a href="kontakt.html#link_footer4">Butikker</a>
       </div>
       <div class="box">
         <h5>Sociale Medier</h5>
