--- a/index.html
+++ b/index.html
@@ -110,8 +110,8 @@
     <footer class="grid_1_1_1_1">
       <div class="box">
         <h5>Kontakt</h5>
-        <a href="kontakt.html#link_footer">Mail</a>
-        <a href="kontakt.html#link_footer4"></a>
+        <a href="kontakt.html#link_footer">Kontaktoplysninger</a>
+        <a href="kontakt.html#link_footer4">Butikker</a>
         <p>Butikker</p>
       </div>
       <div class="box">
