--- a/bestillinger.html
+++ b/bestillinger.html
@@ -245,7 +245,7 @@
     <footer class="grid_1_1_1_1">
       <div class="box">
         <h5>Kontakt</h5>
-        <a href="kontakt.html#link_footer">kontaktoplysninger</a>
+        <a href="kontakt.html#link_footer">Kontaktoplysninger</a>
         <a href="kontakt.html#link_footer4">Butikker</a>
       </div>
       <div class="box">
