--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <link rel="stylesheet" href="css/forside.css" />
     <link rel="stylesheet" href="css/footer.css" />
     <link rel="icon" type="image/svg+xml" href="favicon.svg" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet" />
     <meta name="robots" content="noindex" />
   </head>
   <body>
@@ -17,7 +20,7 @@
         <a href="index.html"><img src="logo.svg" alt="logo" /></a>
       </div>
       <nav class="main-menu">
-        <button class="toggle-btn">Menu</button>
+        <button class="toggle-btn burger">menu</button>
         <ul>
           <li><a href="bestillinger.html">Bestillinger</a></li>
           <li><a href="om_bagt.html">Om Bagt</a></li>
@@ -111,8 +114,7 @@
       <div class="box">
         <h5>Kontakt</h5>
         <a href="kontakt.html#link_footer">Mail</a>
-        <a href="kontakt.html#link_footer4"></a>
-        <p>Butikker</p>
+        <a href="kontakt.html#link_footer4">Butikker</a>
       </div>
       <div class="box">
         <h5>Sociale Medier</h5>
