--- a/kontakt.html
+++ b/kontakt.html
@@ -163,7 +163,7 @@
         <div class="box">
           <h5>Kontakt</h5>
           <a href="kontakt.html#link_footer">Mail</a>
-          <a href="kontakt.html#link_footer4"></a> <P>Butikker</p>
+          <a href="kontakt.html#link_footer4">Butikker</a>
         </div>
         <div class="box">
           <h5>Sociale Medier</h5>
