--- a/om_bagt.html
+++ b/om_bagt.html
@@ -79,8 +79,8 @@
       <div class="box">
         <h5>Kontakt</h5>
         <a href="kontakt.html#link_footer">Mail</a>
-        <a href="kontakt.html#link_footer4"></a>
-        <p>Butikker</p>
+        <a href="kontakt.html#link_footer">Kontaktoplysninger</a>
+        <a href="kontakt.html#link_footer4">Butikker</a> 
       </div>
       <div class="box">
         <h5>Sociale Medier</h5>
