--- a/bestillinger.html
+++ b/bestillinger.html
@@ -34,7 +34,7 @@
       </div>
       <section class="full">
          
-        <div class="minikager_1-1">
+        <div class="mini_kager_1-1">
           <div>
             <div class="minikager_1-1">
               <h4 class="">Jordbærkage på browniebund</h4>
@@ -187,7 +187,7 @@
       </div>
       <section class="grid_1-2">
         <div>
-          <h2 id="link_footer3">Bliv engros- eller erhvervskunde</h2>
+          <h2 id="link_footer3" class="engros_overskrift">Bliv engros- eller erhvervskunde</h2>
           <div class="engros">
             <p>Har du brug for at fylde din café med friskbagt brød? Eller servere croissanter på dit arbejde hver fredag morgen? Måske har i mest lyst til lækre sandwiches til mødet.</p>
             <p>Vi sammensætter pakker til vores erhvervskunder og leder efter løsninger, der passer til lige præcis dine ønsker</p>
