--- a/om_bagt.html
+++ b/om_bagt.html
@@ -28,9 +28,11 @@
     <main>
       <div class="overskrift">
       <h1 id="link_footer5">Vores historie</h1>
-      <p>Franskinspireret boulangerie</p>
+      <div class="paragraf">
+      <p>Franskinspireret boulangerie</p></div>
       </div>
       <img class="billede1" src="img/bagtfacade.webp" alt="">
+      <div class="paragraf">
       <p>
         Der er sket meget, siden det selvklæbende “til salg”-skilt blev fjernet
         fra bageriets vindue i Hornbæk i marts 2011 . Der er blevet købt, solgt,
@@ -38,7 +40,6 @@
         bagt. Alt sammen for at føre en drøm om et fransk bageri med danske
         rødder ud i livet.
       </p>
-      <br />
       <p>
         Vores signatur-brød er det gode, lyse moffebrød, som vi bager efter
         fransk metode med surdej, masser af vand og langtidshævning. Det giver
@@ -46,17 +47,15 @@
         er så sprød, at man kan høre den. Udtrykket er enkelt og rustikt - og
         man får mel på fingrene, når man går hjem fra Bagt med sit brød.
       </p>
-      <br />
       <p>
         Bagt har siden 2011 udviklet sig til 5 succesfulde butikker placeret i
         Nordsjælland og København. Visionerne er store, men missionen vil altid
         være den samme - At skabe bagværk af kvalitet med inspiration fra
         Frankrig.
-      </p>
-      <br />
+      </p></div>
       <section class="full usp">
         <div>
-          <br />
+          <br>
           <p>
             “Jeg tænker tit på, at et brød er noget af det allermest basale og
             fundamentale i vores kost. Men derfor behøver det ikke at være
@@ -66,13 +65,14 @@
             ordentligt brød er en oplevelse, og det er dét, jeg gerne vil give
             gæsterne hos Bagt.” - Hans Schepelern
           </p>
-          <br />
-              </section><br><p>
+          <br>
+              </section>
+              <div class="paragraf"><p>
           Bagt har siden 2011 udviklet sig til 5 succesfulde butikker placeret i
           Nordsjælland og København. Visionerne er store, men missionen vil
           altid være den samme - At skabe bagværk af kvalitet med inspiration
           fra Frankrig.
-        </p><br>
+        </p></div>
 
     </main>
     <footer class="grid_1_1_1_1">
