--- a/om_bagt.html
+++ b/om_bagt.html
@@ -53,7 +53,7 @@
         være den samme - At skabe bagværk af kvalitet med inspiration fra
         Frankrig.
       </p></div>
-      <section class="full usp">
+      <section class="full">
         <div>
           <br>
           <p>
