--- a/om_bagt.html
+++ b/om_bagt.html
@@ -73,6 +73,83 @@
           altid være den samme - At skabe bagværk af kvalitet med inspiration
           fra Frankrig.
         </p></div>
+        <img class="billede1" src="img/bagtfacade.webp" alt="" />
+        <div class="overskrift">
+          <h1>Vision</h1>
+          <br />
+          <p>
+            Hos Bagt bestræber vi os på at skabe bagerhåndværk af kvalitet med
+            bæredygtighed for øje. Vi udfordrer os selv og udvikler vores
+            butikker, samt sortiment med det franske boulagerie som
+            inspirationskilde. Målet er at give vores gæster en autentisk
+            oplevelse hos Bagt, hvorved vi bringer vores gæster tættere på
+            Frankrig. Vi stræber efter at give kærlig service, samt at opbygge
+            tætte relationer til vores gæster.
+          </p>
+        </div>
+        <br />
+        <img class="billede1" src="img/bagtfacade.webp" alt="" />
+        <div class="overskrift">
+          <h1>Vores værdier</h1>
+        </div>
+  
+        <section class="roed">
+          <div class="grid_1-2">
+            <div class="col">
+              <img class="gridbillede" src="img/bagtfacade.webp" alt="" />
+            </div>
+            <div class="col">
+              <h1 class="pinktext">Hey</h1>
+  
+              <p class="pinktext">Lawl lawl lawl lawl</p>
+            </div>
+          </div>
+        </section>
+        <br />
+        <section class="roed">
+          <div class="grid_2-1">
+            <div class="col">
+              <h1 class="pinktext">Hey</h1>
+              <p class="pinktext">Lawl lawl lawl lawl</p>
+            </div>
+            <div class="col">
+              <img src="img/bagtfacade.webp" alt="" />
+            </div>
+          </div>
+        </section>
+        <br />
+        <section class="roed">
+          <div class="grid_1-2">
+            <div class="col">
+              <img src="img/bagtfacade.webp" alt="" />
+            </div>
+            <div class="col">
+              <h1 class="pinktext">Hey</h1>
+              <br />
+              <p class="pinktext">Lawl lawl lawl lawl</p>
+            </div>
+          </div>
+        </section>
+        <br />
+        <section class="roed">
+          <div class="grid_2-1">
+            <div class="col">
+              <h1 class="pinktext">Hey</h1>
+  
+              <p class="pinktext">Lawl lawl lawl lawl</p>
+            </div>
+            <div class="col">
+              <img src="img/bagtfacade.webp" alt="" />
+            </div>
+          </div>
+        </section>
+        <br />
+        <div class="overskrift">
+          <h1>Samarbejdspartnere</h1>
+        </div>
+  
+
+
 
     </main>
     <footer class="grid_1_1_1_1">
