--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       </nav>
     </header>
     <main>
-      <video controls src="https://samilarsen.com/kea/05/bagt-film.mp4?fbclid=IwAR0xo0jsTt5tiMfkAeS_5OC24UucmXarFxd0CIeCbdzs-6Y7YJklwQYCDAA"></video>
+      <video controls autoplay muted src="https://samilarsen.com/kea/05/bagt-film.mp4?fbclid=IwAR0xo0jsTt5tiMfkAeS_5OC24UucmXarFxd0CIeCbdzs-6Y7YJklwQYCDAA"></video>
       <section class="full usp">
         <div>
           <p>"Franskinspireret bageri med danske rødder.</p>
