--- a/kontakt.html
+++ b/kontakt.html
@@ -45,7 +45,7 @@
           </div>
           <div class="boks">
             <h3>App</h3>
-            <p>Download vores app og få ekslusive fordele som loyalitetskunde. Gør dine stempelkort digitale. Hold dig opdateret på nyheder og optjen point når du handler.
+            <p>Download vores app og få eksklusive fordele som loyalitetskunde. Gør dine stempelkort digitale. Hold dig opdateret på nyheder og optjen point når du handler.
             </p>
             <a href="https://apps.apple.com/us/app/bagt/id1564306002" class="ios">IOS</a>
             <a href="https://play.google.com/store/apps/details?id=com.app_bagtnu.layout&pli=1" class="android">Android</a>
@@ -58,7 +58,7 @@
             <h2>Bagt family</h2>
             <p>Hos Bagt udvikler vi os hele tiden, så derfor er vi altid på udkig efter nye engagerede medarbejdere. </p>
             <p> Vi tror på, at det skal være sjovt at gå på arbejde, og at vi allesammen har et ansvar for at gøre Bagt til et godt sted at være. </p>
-            <p> Du er altid velkommen til at sende os en uopfordret ansøgning til os. Vi finder mange af vores medarbejdere gennem uopfordrede ansøgninger.</p>
+            <p> Du er altid velkommen til at sende en uopfordret ansøgning til os. Vi finder mange af vores medarbejdere gennem uopfordrede ansøgninger.</p>
             <p> Send din ansøgning til <a href="mailto:job1@bagt.nu"><strong>job1@bagt.nu</strong></a>
             <p>Vi glæder os til at høre fra dig!</p>
           </div>
