--- a/om_bagt.html
+++ b/om_bagt.html
@@ -7,7 +7,6 @@
     <title>Bagt - Boulangerie & Bageri</title>
     <meta name="robots" content="noindex" />
     <link rel="stylesheet" href="css/mutual.css" />
-    <link rel="stylesheet" href="css/bestillinger.css" />
     <link rel="stylesheet" href="css/footer.css" />
     <link rel="stylesheet" href="css/om_bagt.css">
     <link rel="icon" type="image/svg+xml" href="favicon.svg" />
@@ -73,10 +72,10 @@
           altid være den samme - At skabe bagværk af kvalitet med inspiration
           fra Frankrig.
         </p></div>
-        <img class="billede1" src="img/bagtfacade.webp" alt="" />
+        <img class="billede1" src="img/om/topview.webp" alt="" />
         <div class="overskrift">
           <h1>Vision</h1>
-          <br />
+          <div class="paragraf">
           <p>
             Hos Bagt bestræber vi os på at skabe bagerhåndværk af kvalitet med
             bæredygtighed for øje. Vi udfordrer os selv og udvikler vores
@@ -85,70 +84,95 @@
             oplevelse hos Bagt, hvorved vi bringer vores gæster tættere på
             Frankrig. Vi stræber efter at give kærlig service, samt at opbygge
             tætte relationer til vores gæster.
-          </p>
+          </p></div>
         </div>
         <br />
-        <img class="billede1" src="img/bagtfacade.webp" alt="" />
+        <img class="billede1" src="img/om/mel.jpg" alt="" />
         <div class="overskrift">
           <h1>Vores værdier</h1>
         </div>
   
-        <section class="roed">
+        <section class="full roed">
           <div class="grid_1-2">
-            <div class="col">
-              <img class="gridbillede" src="img/bagtfacade.webp" alt="" />
-            </div>
-            <div class="col">
-              <h1 class="pinktext">Hey</h1>
-  
-              <p class="pinktext">Lawl lawl lawl lawl</p>
+              <img class="gridbillede" src="img/om/latteart.webp" alt="" />
+            <div>
+              <h1>Kærlighed til Frankrig</h1>
+              <p>Bagt blev grundlagt med en drøm om at skabe et bagerunivers med et fransk præg. Indehaveren af Bagt har i mange år arbejdet i Paris, blandt andet i Maison du Danemark og Paul, hvor en stor del af inspirationen er opstået. </p>
+              <p>Vi er et fransk bageri med danske rødder. Derfor vil du kunne finde flere referencer til det franske boulangerie hos Bagt blandt andet gennem vores sortiment og æstetik. </p>
+              <p>Vi vil bringe Frankrig tættere på dig.</p>
             </div>
           </div>
         </section>
-        <br />
-        <section class="roed">
+        <section class="full roed">
           <div class="grid_2-1">
-            <div class="col">
-              <h1 class="pinktext">Hey</h1>
-              <p class="pinktext">Lawl lawl lawl lawl</p>
+            <div>
+              <h1>Nærvær</h1>
+<p>Hos Bagt har vi altid hjertet med i vores handlinger. Vi elsker at give vores gæster en helt særlig oplevelse, når de besøger Bagt.
+  Vi nyder hverdagssamtalerne med vores stamgæster om det store og små såvel som at introducere Bagt for helt nye gæster. Der er ikke noget bedre for os, end når vi kan give et smil med på vejen.</p>
+  <p>Vores relation til vores gæster, værdsætter vi derfor utroligt højt.</p>
+  <p>Udover at være nærværende over for vores gæster, værdsætter vi også et nærværende sammenhold i vores teams. En god arbejdsplads med gode kollegaer skaber fundamentet for den nærværende oplevelse hos </p>
             </div>
-            <div class="col">
-              <img src="img/bagtfacade.webp" alt="" />
+              <img class="gridbillede" src="img/om/nærvær.webp" alt="" />
             </div>
           </div>
         </section>
-        <br />
-        <section class="roed">
+        <section class="full roed">
           <div class="grid_1-2">
-            <div class="col">
-              <img src="img/bagtfacade.webp" alt="" />
+            <div>
+              <img class="gridbillede" src="img/om/kvalitet.webp" alt="" />
             </div>
-            <div class="col">
-              <h1 class="pinktext">Hey</h1>
-              <br />
-              <p class="pinktext">Lawl lawl lawl lawl</p>
-            </div>
+            <div>
+<h1>Håndlavet kvalitet</h1>
+<p>Hos Bagt sætter vi en dyd i at håndlave vores bagværk for at få et personligt præg uden at gå på kompromis med kvaliteten.
+  Vi har signaturvarer som vores “moffebrød”, “Bagerens rugbrød” og “Croissant d’amande” som man kan kende os på.
+  Alt vores bagværk og kager håndlaves til mindste detalje af bagere og konditorer, der brænder for deres værk.
+  Det er en investering i tid, som vi værdsætter frem for at overlade arbejdet til maskiner.</p>
+</div>
           </div>
         </section>
-        <br />
-        <section class="roed">
+        <section class="full roed">
           <div class="grid_2-1">
-            <div class="col">
-              <h1 class="pinktext">Hey</h1>
-  
-              <p class="pinktext">Lawl lawl lawl lawl</p>
-            </div>
-            <div class="col">
-              <img src="img/bagtfacade.webp" alt="" />
+            <div>
+              <h1>Omtanke</h1>
+              <p>Vi stræber efter minimalt spild og har derfor lanceret tiltaget: “Less is more”. I de henseender, der ikke kan forudsiges, har vi tilrettelag initiativer til at nedbringe vores madspild.
+                Hos Bagt kan man købe overskydende varer sidst på dagen til en fordelagtig pris.
+                Vi giver tips og tricks på vores sociale medier til, hvordan man kan give bagværk, der har mistet sin friskhed, nyt liv.
+                Vores emballage er så vidt muligt af organisk materiale, og vi bestræber os på at blive uafhængige af plastik.
+                Stadig flere af vores råvarer er økologiske. 
+                Alt vores overskydende bagværk viderefordeles til NGO’er, der hjælper udsatte i det danske samfund.
+                Vi vil altid have omtanken for øje i vores produktion og daglige drift. Der sker konstant udviklinger på dette punkt!</p>
+              </div>
+            <div">
+              <img class="gridbillede" src="img/om/stopmadspil.webp" alt="" />
             </div>
           </div>
         </section>
-        <br />
-        <div class="overskrift">
-          <h1>Samarbejdspartnere</h1>
-        </div>
-  
-
+        <section class="section4">
+          <h2>Samarbejdspartnere</h2>
+          <div class="grid_forhandlere">
+            <div class="boks">
+              <h3>Depanneur</h3>
+              <p>I vores kundekøler kan du kun få juice af den højeste kvalitet. Vi får nemlig vores juice fra Depanneur.</p>
+              <p>Juice fra Depanneur er produceret i samarbejde med en familiedrevet virksomhed som har specialiceret sig i organisk kvalitetsjuice siden 1974. Deres juice indeholder intet tilsat koncentrat, sukker eller konserveringsmidler. De er bare ren organisk juice.</p>
+            </div>
+            <div class="boks">
+              <h3>Heart2Heart</h3>
+              <p>For at undgå madspild giver vi alt overskydende brød til heart2heart, så hjemløse og udsatte kan få gavn af det!</p>
+              <p>Heart2heart er en NGO, der har som mission at gøre op med ulighed i samfundet og bæredygtighed.</p>
+              <p>Vi er stolte af at samarbejde med Heart2heart, da vi i fælleskab kan bekæmpe madspild og hjælpe udsatte i samfundet.</p>
+            </div>
+            <div class="boks">
+              <h3>Copenhagen Coffee Lab</h3>
+              <p>Hos Bagt vil vi kun servere kaffe af den bedste kvalitet. Derfor får vi vores kaffebønner fra Copenhagen Coffee lab.</p>
+              <p>Copenhagen Coffee Lab sætter gode arbejdsforhold øverst på dagsordenen og producerer dermed deres bønner i forhold til Fair Trade.</p>
+            </div>
+            <div class="boks">
+              <h3>Økologiske kølevarer</h3>
+              <p>Hos Bagt er det muligt at handle mejeriprodukter, juice og pålæg, men disse varer skal leve op til Bagt’s ønske om kvalitet.</p>
+              <p>Derfor er alle produkter i kundekøleren fra økologiske virksomhedder såsom Øllingegaard, Grøn balance, Naturmælk og Bramhults.</p>
+            </div>
+          </div>
+        </section>
 
 
     </main>
