--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <a href="index.html"><img src="logo.svg" alt="logo" /></a>
       </div>
       <nav class="main-menu">
-        <button class="toggle-btn burger">menu</button>
+        <button class="toggle-btn burger"></button>
         <ul>
           <li><a href="bestillinger.html">Bestillinger</a></li>
           <li><a href="om_bagt.html">Om Bagt</a></li>
